--- a/local/index.html
+++ b/local/index.html
@@ -71,13 +71,14 @@
   <script src="js/service/dataService.js"></script>
 
   <!-- controllers !-->
-  <script src="js/controllers/NHomeCtrl.js"></script>
-  <script src="js/controllers/DashboardCtrl.js"></script>
-  <script src="js/controllers/DeviceCtrl.js"></script>
-  <script src="js/controllers/ScenesCtrl.js"></script>
-  <script src="js/controllers/ScheduleCtrl.js"></script>
-  <script src="js/controllers/SecurityCtrl.js"></script>
-  <script src="js/controllers/SettingsServerCtrl.js"></script>
+  <script defer src="js/controllers/NHomeCtrl.js"></script>
+  <script defer src="js/controllers/AllRoomCtrl.js"></script>
+  <script defer src="js/controllers/DashboardCtrl.js"></script>
+  <script defer src="js/controllers/DeviceCtrl.js"></script>
+  <script defer src="js/controllers/ScenesCtrl.js"></script>
+  <script defer src="js/controllers/ScheduleCtrl.js"></script>
+  <script defer src="js/controllers/SecurityCtrl.js"></script>
+  <script defer src="js/controllers/SettingsServerCtrl.js"></script>
 
   <!-- single devices !-->
   <script src="js/devices/light.js"></script>
