--- a/local/html_route/security_template.html
+++ b/local/html_route/security_template.html
@@ -21,6 +21,6 @@
   <section class="custom-modal-wrap">
     <img src="img/button/cross.png" class="close-live-stream-modal" ng-click="security.stopLiveStream()">
     <img ng-src={{security.liveImage}} class="camera-live-stream">
-    <button ng-click="security.fullScreen()" class="button full-screen-btn"></button>
+    <button type="button" ng-click="security.fullScreen()" class="button full-screen-btn"></button>
   </section>
 </section>
